@@ -17,7 +17,8 @@ Changes in version 0.1.1.24 - 2006-09-xx [ongoing]
     - Fix NetBSD bug that could allow someone to force uninitialized RAM
       to be sent to a server's DNS resolver. This only affects NetBSD and
       other platforms that do not bounds-check tolower().
-
+    - Warn when using libevent 1.1a or earlier with win32 or kqueue
+      methods: these are known to be buggy.
 
 Changes in version 0.1.1.23 - 2006-07-30
   o Major bugfixes:
